--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>KaiyeYang-git.github.io</title>
+</head>
 <body>
 <h1>Preference Analysis About UK Viewer's Opinions About Car Purchase During Covid-19 Under Nature Language Processing Mechanism-Comment Research from Twitter Platform</h1>
 <p>An Instructive Page about how the Research Goes</p>
